Update `donut_tutorial` project output
This commit focuses on updating the `donut_tutorial` project with some
final renders and a small animation.

Created the following files:

1) "donut_tutorial/output/video.mp4"

  A .mp4 file of the animation scene (1080 by 1080).

2) "donut_tutorial/output.gif"

  A .gif file of the animation scene (scaled down to 320 by 320).

3) "donut_tutorial/README.md"

  A .md file acting as a summary for the donut tutorial project.

Altered the following files:

1) "donut_tutorial/donut.blend"

  This .blend file has an updated environment scene and includes a
  basic animation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 
-####################
-# compiled sources #
-####################
-.DS_Store
+#########
+# Files #
+#########
 
+.DS_Store
+*.blend[0-9]
+
+#########
+# Paths #
+#########
+
+**/animation_frames
+**/textures
